--- a/src/main/resources/com/game/taki/Game.fxml
+++ b/src/main/resources/com/game/taki/Game.fxml
@@ -1,10 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0"
-            prefWidth="600.0"
-            style="-fx-background-color: #4682B4"
-            xmlns="http://javafx.com/javafx/16"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.game.taki.GameController" />
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #4682B4" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.game.taki.GameController">
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="300.0" layoutY="156.0" pickOnBounds="true" preserveRatio="true"> <Image url="@card_back.png" /></ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="488.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true" rotate="270.0"> <Image url="@hand-holds-cards.png" /></ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="246.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" rotate="180.0"> <Image url="@hand-holds-cards.png" /></ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutY="156.0" pickOnBounds="true" preserveRatio="true" rotate="90.0"> <Image url="@hand-holds-cards.png" /></ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="216.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="166.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="115.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true"></ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="65.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="14.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="519.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="469.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="419.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="368.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="318.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="267.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="216.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="165.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="115.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="65.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="14.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+   <MenuButton layoutX="365.0" layoutY="174.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="ChangeColor">
+     <items>
+       <MenuItem mnemonicParsing="false" text="Action 1" />
+       <MenuItem mnemonicParsing="false" text="Action 2" />
+     </items>
+   </MenuButton>
+</AnchorPane>
