--- a/src/main/resources/com/game/taki/Game.fxml
+++ b/src/main/resources/com/game/taki/Game.fxml
@@ -11,7 +11,7 @@
     <ImageView fitHeight="75.0" fitWidth="100.0" layoutY="156.0" pickOnBounds="true" preserveRatio="true" rotate="90.0"> <Image url="@hand-holds-cards.png" /></ImageView>
     <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="216.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
     <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="166.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
-    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="115.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true"></ImageView>
+    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="115.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true" />
     <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="65.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
     <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="14.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
     <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="519.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
@@ -31,4 +31,5 @@
        <MenuItem mnemonicParsing="false" text="Action 2" />
      </items>
    </MenuButton>
+   <ListView fx:id="handList" layoutX="60.0" layoutY="249.0" prefHeight="150.0" prefWidth="500.0" />
 </AnchorPane>
