--- a/src/main/resources/com/game/taki/settings.fxml
+++ b/src/main/resources/com/game/taki/settings.fxml
@@ -3,10 +3,14 @@
 <?import java.lang.*?>
 <?import javafx.collections.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.game.taki.SettingsController">
-   <ComboBox fx:id="playersNum" layoutX="337.0" layoutY="133.0" prefHeight="26.0" prefWidth="90.0" value="2">
+<AnchorPane prefHeight="540.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.game.taki.SettingsController">
+   <ImageView fx:id="logo" fitHeight="150.0" fitWidth="200.0" layoutX="260.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+      <Image url="@Taki_Cards_Game_Logo.png" />
+   </ImageView>
+   <ComboBox fx:id="playersNum" layoutX="407.0" layoutY="164.0" prefHeight="26.0" prefWidth="90.0" value="4">
       <items>
          <FXCollections fx:factory="observableArrayList">
             <String fx:value="2" />
@@ -15,7 +19,7 @@
          </FXCollections>
       </items>
    </ComboBox>
-   <ComboBox fx:id="handCards" layoutX="337.0" layoutY="188.0" prefHeight="26.0" prefWidth="90.0" value="8">
+   <ComboBox fx:id="handCards" layoutX="407.0" layoutY="219.0" prefHeight="26.0" prefWidth="90.0" value="8">
       <items>
          <FXCollections fx:factory="observableArrayList">
             <String fx:value="4" />
@@ -34,7 +38,7 @@
          </FXCollections>
       </items>
    </ComboBox>
-   <Label layoutX="184.0" layoutY="137.0" text="Number of players:" />
-   <Label layoutX="152.0" layoutY="191.0" text="Initial number of cards in hand:" />
-   <Button fx:id="startGame" layoutX="248.0" layoutY="279.0" mnemonicParsing="false" text="Start game" />
+   <Label layoutX="254.0" layoutY="168.0" text="Number of players:" />
+   <Label layoutX="222.0" layoutY="222.0" text="Initial number of cards in hand:" />
+   <Button fx:id="startGame" layoutX="318.0" layoutY="310.0" mnemonicParsing="false" text="Start game" />
 </AnchorPane>
