--- a/src/main/resources/com/game/taki/Game.fxml
+++ b/src/main/resources/com/game/taki/Game.fxml
@@ -31,5 +31,6 @@
        <MenuItem mnemonicParsing="false" text="Action 2" />
      </items>
    </MenuButton>
-   <ListView fx:id="handList" layoutX="99.0" layoutY="420.0" prefHeight="120.0" prefWidth="500.0" />
+   <ListView fx:id="handList" layoutX="86.0" layoutY="420.0" orientation="HORIZONTAL" prefHeight="140.0" prefWidth="550.0" />
+   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="261.0" layoutY="172.0" pickOnBounds="true" preserveRatio="true" />
 </AnchorPane>
