--- a/src/main/resources/com/game/taki/Game.fxml
+++ b/src/main/resources/com/game/taki/Game.fxml
@@ -6,9 +6,9 @@
 
 <AnchorPane prefHeight="540.0" prefWidth="720.0" style="-fx-background-color: #4682B4" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.game.taki.GameController">
     <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="632.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true"> <Image url="@card_back.png" /></ImageView>
-    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="643.0" layoutY="202.0" pickOnBounds="true" preserveRatio="true" rotate="270.0"> <Image url="@hand-holds-cards.png" /></ImageView>
-    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="310.0" pickOnBounds="true" preserveRatio="true" rotate="180.0"> <Image url="@hand-holds-cards.png" /></ImageView>
-    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="-2.0" layoutY="202.0" pickOnBounds="true" preserveRatio="true" rotate="90.0"> <Image url="@hand-holds-cards.png" /></ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="558.0" layoutY="202.0" pickOnBounds="true" preserveRatio="true" rotate="270.0"> <Image url="@hand-holds-cards.png" /></ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="281.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true" rotate="180.0"> <Image url="@hand-holds-cards.png" /></ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="-2.0" layoutY="202.0" pickOnBounds="true" preserveRatio="true" rotate="90.0"> <Image url="@hand-holds-cards.png" /></ImageView>
 <!--    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="216.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true"> </ImageView>-->
 <!--    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="166.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true"> </ImageView>-->
 <!--    <ImageView fitHeight="75.0" fitWidth="100.0" layoutX="115.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true" />-->
@@ -32,5 +32,5 @@
      </items>
    </MenuButton>
    <ListView fx:id="handList" layoutX="86.0" layoutY="420.0" orientation="HORIZONTAL" prefHeight="140.0" prefWidth="550.0" />
-   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="261.0" layoutY="172.0" pickOnBounds="true" preserveRatio="true" />
+   <ImageView fx:id="pileTopCard" fitHeight="110.0" fitWidth="70.0" layoutX="325.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true" />
 </AnchorPane>
