--- a/src/main/resources/com/game/taki/win.fxml
+++ b/src/main/resources/com/game/taki/win.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="540.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.game.taki.WinScreenController">
-   <ImageView fx:id="logo" fitHeight="150.0" fitWidth="200.0" layoutX="260.0" pickOnBounds="true" preserveRatio="true">
+   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="260.0" pickOnBounds="true" preserveRatio="true">
       <Image url="@Taki_Cards_Game_Logo.png" />
    </ImageView>
-   <Label fx:id="winMessage" alignment="CENTER" layoutX="270.0" layoutY="200.0" textAlignment="CENTER">
+   <Label fx:id="winMessage" alignment="CENTER" layoutX="230.0" layoutY="200.0" textAlignment="CENTER">
       <font>
          <Font size="64.0" />
       </font></Label>
